--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="hello world"/>
+    <com.anwesome.ui.draggableviews.DraggableButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click me"/>
 </FrameLayout>
